src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>surveyAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>surveyCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>surveyContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>surveyCustomerComments__c</fullName>
        <label>Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>surveyExcludeFromReporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude From Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>surveyManagerComments__c</fullName>
        <label>Manager Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>surveyOverallSatisfactionText__c</fullName>
        <label>Overall Satisfaction (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyOverallSatisfaction__c</fullName>
        <formula>CASE(surveyOverallSatisfactionText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Satisfaction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>surveyTimeTakenToResolveCaseText__c</fullName>
        <label>Time Taken To Resolve Case (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyTimeTakenToResolveCase__c</fullName>
        <formula>CASE(surveyTimeTakenToResolveCaseText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Taken To Resolve Case</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>surveyTseCommunicationsText__c</fullName>
        <label>TSE Communications (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyTseCommunications__c</fullName>
        <formula>CASE(surveyTseCommunicationsText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSE Communications</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>surveyTseHelpText__c</fullName>
        <label>TSE Help (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyTseHelp__c</fullName>
        <formula>CASE(surveyTseHelpText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSE Help</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>surveyTseKnowledgeText__c</fullName>
        <label>TSE Knowledge (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyTseKnowledge__c</fullName>
        <formula>CASE(surveyTseKnowledgeText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSE Knowledge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>surveyTseUnderstoodMyIssueText__c</fullName>
        <label>TSE Understood My Issue (Text)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>surveyTseUnderstoodMyIssue__c</fullName>
        <formula>CASE(surveyTseUnderstoodMyIssueText__c,
     &quot;Strongly Disagree&quot;, 1,
     &quot;Somewhat Disagree&quot;, 2,
     &quot;Neutral&quot;,           3,
     &quot;Somewhat Agree&quot;,    4,
     &quot;Strongly Agree&quot;,    5,
                          0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TSE Understood My Issue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SURVEY-{000000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Support_Closed_Case_01</fullName>
        <active>true</active>
        <label>Support Closed Case 01</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>